MGNLUI-1072 ensures reworked layout does not prevent action bar tiles from showing up on tablet

--- a/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/ui-contentapp/browser.scss
+++ b/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/ui-contentapp/browser.scss
@@ -14,5 +14,6 @@
   .v-csslayout-actionbar {
     padding-top: 20px;
     padding-bottom: 40px;
+    overflow: visible;
   }
 }
