--- a/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/ui-contentapp/detail.scss
+++ b/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/ui-contentapp/detail.scss
@@ -15,5 +15,6 @@
   .v-csslayout-actionbar {
     padding-top: 20px;
     padding-bottom: 40px;
+    overflow: visible;
   }
 }
